--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ footer {background:var(--dark); color:white; padding:70px 0 20px;}
         Promo Terbatas
         <b>Pesan Sekarang</b>
     </div>
-    <a href="https://wa.me/6285328736706?text=Halo,%20mau%20pesan%20dong" class="cta-btn">
+    <a href="https://wa.me/6285328736706?text=Halo,%20mau%20pesan%20madu%20kelulut%20dong" class="cta-btn">
         <i class="fab fa-whatsapp"></i> Chat WA
     </a>
 </div>
